Replace buildpack-based image creation with Dockerfiles. There was no good way to enable UTF-8 support, leading to problems with non-ASCII paths in repositories. Also, Spring Boot fat-jars don't work together with the grader, so need to copy and specify dependencies separately.